tests/int/snapshots/r#mod__int__use_command__module_module::analyzer_flags_t_e_d_1.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - "module::analyzer"
    - "-t"
    - "-e"
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
super::path::GroupItem
super::path::PathPrefix
super::path::PathSuffix
super::path::TypeReference

----- stderr -----
