tests/int/snapshots/r#mod__int__use_command__module_module::discover_flags_r.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - "module::discover"
    - "-r"
---
success: true
exit_code: 0
----- stdout -----
crate::constants::{ATTR_CFG, LIB_FILE_NAME, MAIN_FILE_NAME, MODULE_FILE_NAME, MODULE_NAME_TEST}

----- stderr -----
