tests/int/snapshots/r#mod__int__use_command__module_module::discover_flags_t_e.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - "module::discover"
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
