tests/int/snapshots/r#mod__int__use_command__module_module::expand_flags_t_e.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - "module::expand"
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::constants::{MODULE_NAME_TEST, MODULE_NAME_TESTS, PATH_QUALIFIER_CRATE, PATH_QUALIFIER_SELF, PATH_QUALIFIER_SUPER}

----- stderr -----
