tests/int/snapshots/r#mod__int__use_command__module_module::expand_flags_t_e_d_1.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - "module::expand"
    - "-t"
    - "-e"
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
crate::constants::MODULE_NAME_TEST
crate::constants::MODULE_NAME_TESTS
crate::constants::PATH_QUALIFIER_CRATE
crate::constants::PATH_QUALIFIER_SELF
crate::constants::PATH_QUALIFIER_SUPER

----- stderr -----
