tests/int/snapshots/r#mod__int__use_command__module_module::format_flags_t.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - "module::format"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
constants::PATH_QUALIFIER_CRATE
module::{expand, format, locate}

----- stderr -----
